--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title> Learning Java Script</title>
-	<script type="text/javascript" src="calculator.js"></script>
+	<script type="text/javascript" src="./Calculator/calculator.js"></script>
 </head>
 <body>
 	<h1 style=" margin:30px 0px 10px 0px;width:280px;height:60px;font-family:Courier New;font-size:45px; font-weight:bold;
